# msl-mcp-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  run.py  run_jsonrpc_server.py  setup.py  smithery.yaml  test_integrated_voice_macro.py  voice_macro.db
VoiceMacroPro/Models/: Gpt4oModels.cs
VoiceMacroPro/Services/: LoggingService.cs  VoiceRecognitionWrapperService.cs
backend/tests/: test_improved_logging.py  test_microphone_volume_amplification.py
backend/utils/: common_utils.py
docs/: api.md  development.md
mslmcpserver/: .dockerignore  .gitignore  Dockerfile  README.md  msl_ast.py  pyproject.toml  requirements.txt  server.py  smithery.yaml
mslmcpserver/ai/: __init__.py  openai_integration.py  prompt_processor.py
mslmcpserver/config/: __init__.py  settings.py
mslmcpserver/msl/: msl_lexer.py  msl_parser.py
mslmcpserver/tools/: __init__.py  examples_tool.py  explain_tool.py  generate_tool.py  optimize_tool.py  parse_tool.py  validate_tool.py
src/: __init__.py  main.py
src/msl/: __init__.py  generator.py  interpreter.py  parser.py
src/prompt/: __init__.py  analyzer.py  generator.py
src/server/: app.py  fastmcp.py  jsonrpc_server.py  msl_mcp_server.py  prompts.py  resources.py  state_tracker.py  tools.py  voice_processor.py  windows_automation.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_errors.py  test_fastmcp.py  test_generator.py  test_interpreter.py  test_jsonrpc_server.py  test_lexer.py  test_msl.py  test_msl_interpreter.py  test_msl_mcp_server.py  test_msl_parser.py  test_nodes.py  test_parser.py  test_prompt.py  test_rest_client.py  test_server.py  test_state_tracker.py  test_tokens.py  test_validation.py  test_websocket_client.py  test_windows_automation.py
tools/: validate_tool.py
