[project]
name = "msl-mcp-server"
version = "0.1.0"
description = "MSL (Macro Script Language) MCP Server for Windows Automation"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pyautogui>=0.9.54",
    "python-json-rpc>=1.3.0",
    "pydantic>=2.5.2",
    "python-dotenv>=1.0.0",
    "mcp>=0.1.0",
    "httpx>=0.25.2",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.2",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 