[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msl-mcp-server"
version = "1.0.0"
description = "MSL (Macro Scripting Language) MCP Server with OpenAI Integration"
readme = "README.md"
license = "MIT"
authors = [
    {name = "MSL Development Team", email = "dev@msl-server.com"}
]
keywords = ["mcp", "msl", "macro", "scripting", "gaming", "openai", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.50.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "typing-extensions>=4.8.0",
    "structlog>=23.2.0",
    "orjson>=3.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/your-repo/msl-mcp-server"
Documentation = "https://github.com/your-repo/msl-mcp-server/wiki"
Repository = "https://github.com/your-repo/msl-mcp-server"
Issues = "https://github.com/your-repo/msl-mcp-server/issues"

[project.scripts]
msl-mcp-server = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["msl", "tools", "ai", "config"]

[tool.hatch.build.targets.sdist]
include = [
    "/msl",
    "/tools", 
    "/ai",
    "/config",
    "/server.py",
    "/requirements.txt",
    "/README.md",
    "/smithery.yaml",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*" 