[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msl-mcp-server"
version = "1.0.0"
description = "MSL (Macro Scripting Language) MCP Server for AI-powered macro generation and optimization"
readme = "README.md"
license = "MIT"
authors = [
    {name = "MSL Team", email = "team@msl.dev"},
]
keywords = ["mcp", "msl", "macro", "scripting", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Systems Administration :: Configuration",
]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.3.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/yourusername/msl-mcp-server"
Repository = "https://github.com/yourusername/msl-mcp-server"
Issues = "https://github.com/yourusername/msl-mcp-server/issues"

[project.scripts]
msl-mcp-server = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["ai", "config", "msl", "tools"]

[tool.hatch.build.targets.sdist]
include = [
    "/ai",
    "/config", 
    "/msl",
    "/tools",
    "/server.py",
    "/requirements.txt",
    "/README.md",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
